retrieve_ENO_DEV1/objects/Crate__c.object
<CustomObject>
    <fields>
        <fullName>Date_Last_Packed__c</fullName>
        <label>Date Last Packed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_person_to_pack_show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last person to pack show</label>
        <referenceTo>B25__Staff__c</referenceTo>
        <relationshipLabel>Crates</relationshipLabel>
        <relationshipName>Crates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>(Eg a note about crate must be stored certain way up)</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Crates</relationshipLabel>
        <relationshipName>Crates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IMAGE(&quot;https://chart.googleapis.com/chart?cht=qr&amp;chs=200x200&amp;chl=&quot; +
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id ,
Name,
200,
200
)</formula>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Height__c</fullName>
        <label>Size (Height)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Length__c</fullName>
        <inlineHelpText>(in mm)</inlineHelpText>
        <label>Size (Length)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Width__c</fullName>
        <label>Size (Width)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_crate_bespoke__c</fullName>
        <label>Skip, Crate, Bespoke</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skip</fullName>
                </value>
                <value>
                    <fullName>Crate</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                    <default>true</default>
                    <label>Bespoke</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Volume_in_cubic_feet__c</fullName>
        <formula>Total_Volume_in_mm3__c * 0.00000003531467</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (in cubic feet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_in_mm3__c</fullName>
        <formula>Size_Length__c * Size_Width__c * Size_Height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (in mm3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Crate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Crate Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>